--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "Apache-2.0",
   "private": false,
   "scripts": {
-    "build": "webpack --progress -p",
-    "dev": "webpack-dev-server --content-base src/ --inline",
+    "build": "cross-env NODE_ENV=production webpack --progress && cp dist/syndesi-ui.css docs/syndesi-ui.css",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --content-base src/ --inline",
     "build2": "node-sass src/main.scss dist/syndesi-ui.css",
     "docs2": "yarn run kss --config .kss-config.json",
     "lint2": "yarn run sass-lint -c .sass-lint.yml 'src/**/*.scss' -v -q",
@@ -27,6 +27,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "kss": "^3.0.0-beta.23",
@@ -35,12 +36,16 @@
     "node-sass": "^4.9.4",
     "node-sass-glob-importer": "^5.2.0",
     "nodemon": "^1.18.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "sass-lint": "^1.12.1",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   }
 }
